<resources>
    <string name="app_name">Seu Buraquinho</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bruno "Borta" Bortagaray</string>
    <string name="nav_header_subtitle">bruno.bortagaray@objectedge.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="action_share">Compartilhar</string>

    <!-- Itens do Menu Lateral -->
    <string name="menu_lateral_header">Suas Configuracoes</string>
    <string name="menu_lista">Listar Buraquinhos</string>
    <string name="menu_edit_foto">Editar Seu Buraquinho</string>
    <string name="menu_cadastrar">Cadastrar Seu Buraquinho</string>
    <string name="menu_tipos">Tipos de Buraquinho</string>
    <string name="menu_picasso">Mostrar o Picasso</string>
    <string name="menu_mapa">Google Maps</string>
    <string name="menu_sign_out">Sair</string>

    <!-- Strings da intenção Listar do menu lateral -->
    <string name="titulo">Título do Card</string>
    <string name="texto">Texto do Card Texto do Card Texto do Card Texto do Card Texto do Card Texto do Card Texto do Card Texto do Card Texto do Card Texto do Card Texto do Card Texto do Card Texto do Card Texto do Card Texto do Card Texto do Card Texto do Card </string>

    <!-- Strings do formulario do seu buraquinho -->
    <string name="titleCadastro">Cadastro de Buraco</string>
    <string name="lblEndereco">Endereço</string>
    <string name="lblNumero">Numero</string>
    <string name="lblLat">Latitude</string>
    <string name="lblLon">Longitude</string>
    <string name="lblDescricao">Descrição</string>
    <string name="btnSalvar">Salvar</string>

    <!-- Strings do detalhe do seu buraquinho -->
    <string name="titleDetalhe">Detalhe de Buraco</string>
    <string name="titleEnderecoNumero">Endereço e Número:</string>
    <string name="titleLatitude">Latitude:</string>
    <string name="titleLongitude">Lontitude:</string>
    <string name="titleDescricao">Descrição:</string>
    <string name="btnImportancia">Dar Importancia!</string>

    <!-- Strings do Login e Cadastro -->
    <string name="login_titulo">LOGIN</string>
    <string name="login_email">E-mail</string>
    <string name="login_pwd">Senha</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_cadastro">Cadastre-se</string>
    <string name="cadUser_titulo">CADASTRAR USUÁRIO</string>
    <string name="login_cpwd">Confirme sua Senha</string>
    <string name="cadUser_btnCad">CADASTRAR</string>
    <string name="cadUser_btnCanc">CANCELAR</string>
    <string name="title_activity_principal">Principal</string>

    <!-- Google Maps -->
    <string name="title_activity_maps">Map</string>
</resources>
