<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <!-- CardView que contém os elementos-->

<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    card_view:cardBackgroundColor="@color/cardview_light_background"
    card_view:cardCornerRadius="4dp">
        <RelativeLayout android:layout_width="match_parent"
                  android:layout_height="match_parent">
                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:gravity="start"
                    android:singleLine="true"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/titulo"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
               <ImageView
                    android:id="@+id/imagem"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@id/titulo"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/montanhas"/>
                <TextView
                    android:id="@+id/descricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imagem"
                    android:layout_centerVertical="true"
                    android:layout_margin="4dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="3"
                    android:padding="10dp"
                    android:text="@string/texto"
                    android:textColor="@color/button_material_dark"
                    android:textSize="13sp"
                    android:typeface="sans"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
